--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
         <footer>
                 <p>&copy; 2020|Lusanda Mavuma|South Africa|BYUI-Learning</p>
                 <p>Last Updated:</p>
+                <p id="lastMod">Last updated:</p>
+                        <span id="lastmodDate"></span>
         </footer>
     </body>
