--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
     <head>
         <title>Assign 1 portal for Lusanda Mavuma</title>
@@ -11,7 +11,7 @@
     <body>
         <header>
             <h1>Lusanda Mavuma</h1>   
-            <div class="logo-box"><img src ="C:\Users\mavuma.lusanda\Desktop\BYU-IDAHO\FALL SEMESTER 2019\CIT230\Lusyluh.github.io\IMAGES\Profile.jpg" alt = "Profile Picture" width="115" height="100"></div>    
+            <img src ="C:\Users\mavuma.lusanda\Desktop\BYU-IDAHO\FALL SEMESTER 2019\CIT230\Lusyluh.github.io\IMAGES\Profile.jpg" alt = "Profile Picture" width="115" height="100">   
         </header>
         <main>
             <h2>CIT 230:Assignment Portal </h2>
