--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <h1>Lusanda Mavuma</h1>   
-            <img src ="C:\Users\mavuma.lusanda\Desktop\BYU-IDAHO\FALL SEMESTER 2019\CIT230\Lusyluh.github.io\IMAGES\Profile.jpg" alt = "Profile Picture" width="115" height="100">   
+            <img src ="IMAGES\Profile.jpg" alt = "Profile Picture" >   
         </header>
         <main>
             <h2>CIT 230:Assignment Portal </h2>
@@ -25,7 +25,6 @@
         </main>
         <footer>
                 <p>&copy; 2020|Lusanda Mavuma|South Africa|BYUI-Learning</p>
-                <p>Last Updated:</p>
                 <p id="lastMod">Last updated:</p>
                         <span id="lastmodDate"></span>
         </footer>
