--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <footer>
             <p id="Colmod">&copy; 2020|Lusanda Mavuma|South Africa|<a href="https://www.byui.edu/online">BYUI-Online Learning</a></p>
             <span id="dateModified">Last Updated:</span> 
-            <p><script src= "date.js"></script></p>
+            <p><script src="Javascript\date.js"></script></p>
                 
                            
         </footer>
