--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Assignment portal for Lusanda Mavuma in CIT230, BYUI">
         <link rel="stylesheet" href="/style.css">
-        <script src="Javascript\date.js"></script>
+        <script src="Javascript/date.js"></script>
         
         
     </head>
