--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         </main>
         <footer>
-            <p id="Colmod">&copy; 2020|Lusanda Mavuma|South Africa|<a href="https://www.byui.edu/online">BYUI-Online Learning</a></p>
+            <p id="Colmod">&copy; <span id="currentYear"|Lusanda Mavuma|South Africa|<a href="https://www.byui.edu/online">BYUI-Online Learning</a></p>
              
             <p id="modDate">Last Updated:<span id="dateModi"></span></p>                 
         </footer>
