--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -19,22 +19,19 @@
     
         <main>
             <section>
-                <h2>White Space</h2>
-                <h3><a href="https://www.nike.com/za/"></a></h3>
+                <h2><a href="https://www.nike.com/za/">White Space</a></h2>
                 <img src="IMAGES\Nike.png" alt=" Nike women's shoes">
                 <div id="fix_p"><p>The Nike website has a lot of white space in between the products, the images are clear and have white space in between that makes the page appear nice and clean.</p></div>
             </section
             >
             <section>
-                <h2>Alignment</h2>
-                <h3><a href="https://web.facebook.com/">Facebook.com</a></h3>
+                <h2><a href="https://web.facebook.com/">Alignment</a></h2>
                 <img src="IMAGES\Facebook.png" alt="my facebook">
                 <p id="fix_p">Facebook shows a good design principle of aignment. The live stories are aligned nicely at the top, creating a nice visual to the website. Important links like the news feed are aligned to the left of the page, while all advertisements are aligned to the right.</p>
             </section>
     
             <section>
-                <h2>Hick's Law</h2>
-                <h3><a href="https://www.byui.edu">BYUI</a></h3>
+                <h2><a href="https://www.byui.edu">Hick's Law</a></h2>
                 <img src="IMAGES\byui.png" alt="Brigham Young University-Idaho">
                 <p id="fix_p">The university website is a good example of Hick's Law applied. It take a few minutes for a student or visitor to the page to get what they want. There aren't many options to confuse the viewer. </p>
             </section>
