--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -36,7 +36,7 @@
             </section>
     
             <section>
-                <h2>Hicks's Laws</h2>
+                <h2>Hick's Laws</h2>
                 <h3><a href="https://www.byui.edu">byui.edu</a></h3>
                 <img src="IMAGES\byui.png" alt="Brigham Young University-Idaho">
                 <p>The university website is a good example of Hick's Law applied. It take a few minutes for a student or visitor to the page to get what they want. There aren't many options to confuse the viewer. </p>
