--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Assignment 2, ">
-        <link rel="stylesheet" href="CSS\design.css">
+        <link rel="stylesheet" href="CSS\small.css">
         <link rel="stylesheet" href="CSS\medium.css">
         <link rel="stylesheet" href="CSS\large.css">
         <link rel="stylesheet" href = "CSS/normalize.css">
