--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Assignment portal for Lusanda Mavuma in CIT230, BYUI">
-        <link rel="stylesheet" href="CSS/style.css">
+        <link rel="stylesheet" href="CSS/small.css">
         <link rel="stylesheet" href = "CSS/normalize.css">
         <link rel="stylesheet" href = "CSS/middle.css">
         <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
