--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -5,26 +5,25 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Weather site Project:CIT230 BYUI">
-        <link rel="stylesheet" href="CSS/L3CSS.css">
-        <link rel="stylesheet" href = "CSS/large.css">
-        <link rel="stylesheet" href = "CSS/medium.css">
         <link rel="stylesheet" href = "CSS/normalize.css">
+        <link rel="stylesheet" href="CSS/L3CSS.css">
+        <link rel="stylesheet" href = "CSS/medium.css">
+        <link rel="stylesheet" href = "CSS/large.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <h1><strong>Target Audience</strong></h1>
             <h2>Lusanda Mavuma</h2>
-        <nav>
-          <!--navigation here-->
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href ="target-audience.html">Target Audience</a></li>
-                <li><a href ="color-scheme.html">Color Scheme</a></li>
-                <li><a href="typography.html">Typography</a></li>  
-            </ul>
-        </nav> 
         </header>
+        <nav><!--navigation here-->
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href ="target-audience.html">Target Audience</a></li>
+                  <li><a href ="color-scheme.html">Color Scheme</a></li>
+                  <li><a href="typography.html">Typography</a></li>  
+              </ul>
+          </nav> 
         <main>
             <!--target audience-->
           <section><h2>Target Audience</h2>
