--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
             <ul>
                 <li>Lesson 02:<a href="Lesson2\design-principles.html">Design Principles</a></li>
-                <li>Lesson 03:<a href="index.html">Website Planning Document</a></li>
+                <li>Lesson 03:<a href="lesson3\index.html">Website Planning Document</a></li>
                 <li>Lesson 04:<a href="#">Link</a>|<a href="#">Link</a></li>
             </ul>
 
