--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -27,11 +27,10 @@
         <main>
             <!--target audience-->
           <section><h2>Target Audience</h2>
-            <p>This site is targeted for everyone from the age of 13, both female and male. Thirteen is the age that most kids get 
-                smartphones, and are able to connect to the internet. It is a special site for the travellers, as it will update them
-                of their weather forecast wherever they are. 
+            <p>This site is targeting everyone from the age of 21, both female and male. Twenty one is the age that most people start showing interest 
+                in travelling on their own without parents.It is a special site for travellers, people who like being outdoors by the lakeside or hiking.
             </p>
-            <h2>Personas</h2>
+            <h2>Personas</h2><br>
             <table>
                     <tr>
                       <th>Persona</th>
@@ -47,13 +46,50 @@
                     </tr>
                     <tr>
                       <td>Goals and Tasks</td>
-                      <td>She is young, and  wants to travel the world while under the age of 30 before settling down. She wants to travel to place with beautiful weather and beaches.</td>
+                      <td>Use the website to get weather updates for the three cities</td>
+                    </tr>
+                    <tr>
+                      <td>Social</td>
+                      <td>She is young, outgoing, and likes to travel to places where she can conect with nature. She wants to travel to places with beautiful weather, nice hiking trails and horse riding</td>
                     </tr>
                     <tr>
                       <td>Quote</td>
                       <td>"You only live once"</td>
                     </tr>
-                  </table>
+                  </table><br>
+                  <!--Persona number 2-->
+                  <table>
+                      <tr>
+                        <td>Fictional Name</td>
+                        <td>Bonga Nkosi</td>
+                      </tr>
+                      <tr>
+                        <td>Demographics</td>
+                        <td><ul><li>Male</li><li>25-50 years old</li><li>Married with children</li><li>Has a high school diploma</li></ul></td>
+                      </tr>
+                      <tr>
+                        <td>Goals and Tasks</td>
+                        <td>Plan ahead camping trips with family, and fishing trips with friends.Get hourly weather updates of places to visit.</td>
+                      </tr>
+                      <tr>
+                          <td>Social</td>
+                          <td>Likes going out camping and fishing. Life is much more fun on the outdoors with family</td>
+                        </tr>
+                      <tr>
+                        <td>Quote</td>
+                        <td>“Happiness is having a large, loving, caring, close-knit family in another city.” –George Burns</td>
+                      </tr>
+                    </table><br>
+              <h2>Scenarios</h2><br>
+              <ol>
+                <li>How is the weather forecast today?</li>
+                <li>What should I wear?</li>
+                <li>Is it going to rain anytime today?</li>
+                <li>Should I carry an umbrella?</li>
+                <li>What is the weather forecast for the whole week?</li>
+                <li>What's the weather going to be this weekend on our camping site/hiking trail?</li>
+              </ol>
+
               </section>
 
         </main>
