--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -32,15 +32,15 @@
             <section>
                 <!--Site name here-->
                 <h2>Site Name:</h2>
-                <p>weather-with-lusy</p>
+                <p>weatherguru</p>
                 <!--site purpose here-->
                 <h2>Site Purpose</h2>
-                <p>The purpose of this site is to provide you with current weather updates that are accurate. It does not matter which part of the world you
-                you in, we have the 24 hour weather service for you. The purpose is to give you access to the most accurate, reliable data.
+                <p>The purpose of this site is to provide you with current weather updates that are accurate from the weather experts. It does not matter which season of year,
+                we have the 24 hour weather service for you. The ultimate goal is to give you access to the most accurate, reliable weather data you can trust.
                 </p>
                 <!--Domain name here-->
                 <h2>Domain Name:</h2>
-                <p>This is an available domain found...</p>
+                <p>www.weatherguru.expert</p>
                 <!--Logo-->
                 <h2>Site Logo</h2>
                 <img src ="Logo/kweather.png" alt = "Weather site Logo" width="115" height="100"> 
