--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     </head>
     <body>
         <header>
-            <h1 id="Colmod">Lusanda Mavuma</h1>   
-            <img src ="IMAGES\Profile.jpg" alt = "Profile Picture" >   
+            <h1 id="col_h">Lusanda Mavuma</h1>   
+            <img src ="IMAGES/Profile.jpg" alt = "Profile Picture" >   
         </header>
         <main>
             <h2>CIT 230:Assignment Portal </h2>
             
             <ul>
-                <li>Lesson 02:<a href="Lesson2\design-principles.html">Design Principles</a></li>
-                <li>Lesson 03:<a href="lesson3\index.html">Website Planning Document</a></li>
+                <li>Lesson 02:<a href="Lesson2/design-principles.html">Design Principles</a></li>
+                <li>Lesson 03:<a href="lesson3/index.html">Website Planning Document</a></li>
                 <li>Lesson 04:<a href="#">Link</a>|<a href="#">Link</a></li>
             </ul>
 
