--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -18,8 +18,7 @@
             <h1><strong>Color Scheme</strong></h1>
             <h2>Lusanda Mavuma</h2>
         </header>
-        <nav>
-            <!--navigation here-->
+        <nav><!--navigation here-->
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href ="target-audience.html">Target Audience</a></li>
