--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -47,7 +47,7 @@
 
         </main>
         <footer>
-            <p id="Colmod">&copy;<span id="currentYear"></span> Weather with Lusy|Lusanda Mavuma|South Africa|<a href="https://www.byui.edu/online">BYUI-Online Learning</a></p>
+            <p id="Colmod">&copy;<span id="currentYear"></span> weatherguru|Lusanda Mavuma|South Africa|<a href="https://www.byui.edu/online">BYUI-Online Learning</a></p>
              
             <p id="modDate">Last Updated:<span id="dateModi"></span></p>                 
         </footer>
