--- a/lesson4/preston.html
+++ b/lesson4/preston.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-        <title>Lesson 3: Weather Site Plan</title>
+        <title>Preston Weather Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Weather site Project:CIT230 BYUI">
@@ -37,10 +37,34 @@
         </nav> 
         <main><!--main content of the page here--> 
             <h2>Preston Idaho</h2>
-            <div class="weathersum">Weather Summary</div>
-            <div class="contentarea">5 day weather forecast</div>
-            <div class="contentarea">Article</div>
-            <div class="contentarea">Contact Information</div>
+            <div class="container1">
+                <div class="heroImg">
+                    <img src="images/heroimage.jpg" alt="Preston Town" height = 300px width=100% >
+                </div>
+                <section class="weatherSum">
+                    <h3>Weather Summary</h3>
+                    <p>Low: 17degs  High: 29degs</p>
+                    <p>Wind Speed: 20km/h</p>
+                    <p>Wind Direction: South</p>
+                    <p>Humidity: 69%</p>
+                    <p>Chance of Rain : 1%</p>
+                </section>
+            </div>
+            <!--<div class="weathersum">Weather Summary</div>--->
+            <!--<div class="contentarea">5 day weather forecast</div>--->
+            <div class="contentarea">
+                <h3>Getting Ready for another season</h3>
+                <h5>Written by: Lusanda Mavuma</h5>
+                <div>
+                    <p>Massa sapien faucibus et molestie ac feugiat sed. Facilisis gravida neque convallis a cras semper. Porttitor massa id neque aliquam vestibulum. Id volutpat lacus laoreet non curabitur gravida arcu ac. <br>
+                        Consectetur purus ut faucibus pulvinar elementum integer enim neque. Est placerat in egestas erat.Vitae nunc sed velit dignissim sodales ut eu sem integer. Purus semper eget duis at tellus. Neque aliquam vestibulum morbi blandit cursus. A cras semper auctor neque. Faucibus ornare suspendisse sed nisi lacus sed viverra tellus in. Lectus nulla at volutpat diam ut venenatis tellus. Aliquam sem et tortor consequat id porta nibh. Donec ac odio tempor orci dapibus ultrices in iaculis. Sit amet dictum sit amet justo donec. Nibh praesent tristique magna sit.</p>
+                </div>
+                <div class="articleimg">
+                        <img src="images/idaho-landscape-mountains-1694642.jpg" alt="Seasons of the year" width=100% height=250px>
+                    </div>
+
+            </div>
+            <!---<div class="contentarea">Contact Information</div>--->
        
 
         </main>
