--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li>Lesson 02:<a href="Lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03:<a href="lesson3/index.html">Website Planning Document</a></li>
                 <li>Lesson 04:<a href="lesson4/preston.html">Preston Page</a></li>
+                <li>Lesson 05:<a href="lesson4/preston-5.html">Preston</a></li>
             </ul>
 
         </main>
