--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -12,9 +12,11 @@
         <link rel="stylesheet" href = "css/l5large.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <script src="js/toggle.js"></script>
+        <script src="js/displaybanner.js"></script>
         
     </head>
     <body>
+        <div id="fridaybanner" onload="display_banner()"></div>
         <header>
             <picture><img src ="images/kweather.png" alt = "Weather site Logo" > </picture>
             <section class="headings">
