--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -15,8 +15,8 @@
         <script src="js/displaybanner.js"></script>
         
     </head>
-    <body>
-        <div id="fridaybanner" onload="display_banner()"></div>
+    <body onload="display_banner()">
+        <div id="fridaybanner"></div>
         <header>
             <picture><img src ="images/kweather.png" alt = "Weather site Logo" > </picture>
             <section class="headings">
