--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -15,7 +15,7 @@
         <script src="js/displaybanner.js"></script>
         
     </head>
-    <body onload="display_banner()">
+    <body>
         <div id="fridaybanner"></div>
         <header>
             <picture><img src ="images/kweather.png" alt = "Weather site Logo" > </picture>
