--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -12,10 +12,10 @@
         <link rel="stylesheet" href = "css/l5large.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <script src="js/toggle.js"></script>
-        <script src="js/displaybanner.js"></script>
+        
         
     </head>
-    <body>
+    <body onload="display_banner()">
         <div id="fridaybanner"></div>
         <header>
             <picture><img src ="images/kweather.png" alt = "Weather site Logo" > </picture>
