--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -37,8 +37,7 @@
                 <li><a href="#">Gallery</a></li>
             </ul>
         </nav> 
-        <main>
-            <!--weather summary and here image--> 
+        <main><!--weather summary and here image--> 
             <h2>Preston Idaho</h2>
             <div class="container1">
                 <img class="heroImg" src="images/heroimage2.jpg" alt="Preston Town">
@@ -57,27 +56,27 @@
                 <div class="fiveday">
                     <div class="forecast">
                         <span class="weekday">Wed</span>
-                        <img src="images/sunny.png" alt="Sunny" width=100px height=100px>
+                        <img src="images/sunny.png" alt="Sunny" width="100" height="100">
                         <span class="weather-data">30&deg;C</span>
                     </div>
                     <div class="forecast">
                         <span class="weekday">Thur</span>
-                        <img src="images/sunny.png" alt="Sunny" width=100px height=100px>
+                        <img src="images/sunny.png" alt="Sunny" width="100" height="100">
                         <span class="weather-data">24&deg;C</span>
                     </div>
                     <div class="forecast">
                         <span class="weekday">Fri</span>
-                        <img src="images/sunny.png" alt="Sunny" width=100px height=100px>
+                        <img src="images/sunny.png" alt="Sunny" width="100" height="100">
                         <span class="weather-data">34&deg;C</span>
                     </div>
                     <div class="forecast">
                         <span class="weekday">Sat</span>
-                        <img src="images/sunny.png" alt="Sunny" width=100px height=100px>
+                        <img src="images/sunny.png" alt="Sunny" width="100" height="100">
                         <span class="weather-data">29&deg;C</span>
                     </div>
                     <div class="forecast">
                         <span class="weekday">Sun</span>
-                        <img src="images/sunny.png" alt="Sunny"width=100px height=100px>
+                        <img src="images/sunny.png" alt="Sunny" width="100" height="100">
                         <span class="weather-data">31&deg;C</span>
                     </div>
                 </div>
@@ -103,14 +102,14 @@
                     <P class="details">&#128234;Preston, ID 83263</P>
                     <P class="details">&#128222;+999-999-9999</P>
                     <P class="details">&#128140; info@weatherguru.com</P>
-                <!---social media content-->
+                    <!---social media content-->
                     <a target="_blank" href="https://www.facebook.com">
                         <img src="images/facebook.png" alt="Facebook icon" width="30" height="30"></a>
                     <a target="_blank" href="https://www.instagram.com">
                         <img src="images/instagram.png" alt="Instagram icon" width="30" height="30"></a>
                     <a target="_blank" href="https://www.twitter.com">
                         <img src="images/twitter.png" alt="Twitter icon" width="30" height="30"></a>
-                
+                </div>
             </div>
         </main>
         <footer>
