--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -8,7 +8,7 @@
         <link rel="shortcut icon" href = "images/myfavicon.ico" type="image/x-icon">
         <link rel="stylesheet" href = "css/normalize.css">
         <link rel="stylesheet" href="css/l5small.css">
-        <link rel="stylesheet" href = "CSS/l5middle.css">
+        <link rel="stylesheet" href = "css/l5middle.css">
         <link rel="stylesheet" href = "css/l5large.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <script src="js/toggle.js"></script>
@@ -118,6 +118,7 @@
             <p><span id="day"></span></p>                 
         </footer>
         <script src="js/updates.js"></script>
+        <script src="js/displaybanner.js"></script>
         
         
     </body>
