--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li>Lesson 03:<a href="lesson3/index.html">Website Planning Document</a></li>
                 <li>Lesson 04:<a href="lesson4/preston.html">Preston Page</a></li>
                 <li>Lesson 05:<a href="lesson5/preston-5.html">Preston</a></li>
+                <li>Lesson 06:<a href="lesson6/preston-6.html">Preston:Working with images</a></li>
             </ul>
 
         </main>
@@ -34,6 +35,9 @@
         </footer>
         <script src="Javascript/date.js"></script>
         
-        
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+        <script>
+        WebFont.load({google:{families: ['Roboto']}});
+        </script>
     </body>
 </html>
