--- a/lesson7/imgload.html
+++ b/lesson7/imgload.html
@@ -13,22 +13,24 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <script src="js/toggle.js"></script>  
     </head>
-    <body>
+    <body class="gridview">
         <h1>Lazy Loading</h1>
-        <picture>
-            <img src = "images/image1.jpg" >
-        </picture>
-        <picture>
-            <img src="images/image2.jpg">
-        </picture>
-        <picture>
-            <img src="images/image3.jpg">
-        </picture>
-        <picture>
-            <img src="images/image4.jpg">
-        </picture>
-        <picture>
-            <img src="images/image5.jpg">
-        </picture>
+        <div>
+            <picture>
+                <img src = "images/image1.jpg" >
+            </picture>
+            <picture>
+                <img src="images/image2.jpg">
+            </picture>
+            <picture>
+                <img src="images/image3.jpg">
+            </picture>
+            <picture>
+                <img src="images/image4.jpg">
+            </picture>
+            <picture>
+                <img src="images/image5.jpg">
+            </picture>
+        </div>
     </body>
     </html>
