--- a/lesson7/imgload.html
+++ b/lesson7/imgload.html
@@ -11,26 +11,30 @@
         <!--<link rel="stylesheet" href = "css/l6middle.css">
         <link rel="stylesheet" href = "css/l6large.css">-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-        <script src="js/toggle.js"></script>  
+        
     </head>
     <body class="gridview">
         <h1>Lazy Loading</h1>
         <div>
             <picture>
-                <img src = "images/image1.jpg" >
+                <img src="images/placeholder.jpg" data-src ="images/image1.jpg" alt="Christmas Tree">
             </picture>
             <picture>
-                <img src="images/image2.jpg">
+                <img src="images/placeholder.jpg" data-src="images/image2.jpg">
             </picture>
             <picture>
-                <img src="images/image3.jpg">
+                <img src="images/placeholder.jpg" data-src="images/image3.jpg">
             </picture>
             <picture>
-                <img src="images/image4.jpg">
+                <img src="images/placeholder.jpg" data-src="images/image4.jpg">
             </picture>
             <picture>
-                <img src="images/image5.jpg">
+                <img src="images/placeholder.jpg" data-src="images/image5.jpg">
+            </picture>
+            <picture>
+                <img src="images/placeholder.jpg" data-src="images/image6.jpg">
             </picture>
         </div>
+        <script src="load.js" defer></script>  
     </body>
     </html>
