--- a/lesson7/imgload.html
+++ b/lesson7/imgload.html
@@ -4,12 +4,8 @@
         <title>Progrssive Image Loading</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Weather site Project:CIT230 BYUI">
-        <link rel="shortcut icon" href = "images/myfavicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href = "css/normalize.css">
+        <meta name="description" content="Progressive Image Loading">>
         <link rel="stylesheet" href="loadstyle.css">
-        <!--<link rel="stylesheet" href = "css/l6middle.css">
-        <link rel="stylesheet" href = "css/l6large.css">-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         
     </head>
