--- a/lesson7/imgload.html
+++ b/lesson7/imgload.html
@@ -16,19 +16,19 @@
                 <img src="images/placeholder.jpg" data-src ="images/image1.jpg" alt="Christmas Tree">
             </picture>
             <picture>
-                <img src="images/placeholder.jpg" data-src="images/image2.jpg">
+                <img src="images/placeholder.jpg" data-src="images/image2.jpg" alt="christmas lights">
             </picture>
             <picture>
-                <img src="images/placeholder.jpg" data-src="images/image3.jpg">
+                <img src="images/placeholder.jpg" data-src="images/image3.jpg" alt = "angel">
             </picture>
             <picture>
-                <img src="images/placeholder.jpg" data-src="images/image4.jpg">
+                <img src="images/placeholder.jpg" data-src="images/image4.jpg" alt="girl in fur">
             </picture>
             <picture>
-                <img src="images/placeholder.jpg" data-src="images/image5.jpg">
+                <img src="images/placeholder.jpg" data-src="images/image5.jpg" alt="chrsitmas presents">
             </picture>
             <picture>
-                <img src="images/placeholder.jpg" data-src="images/image6.jpg">
+                <img src="images/placeholder.jpg" data-src="images/image6.jpg" alt="girl hanging presents">
             </picture>
         </div>
         <script src="load.js" defer></script>  
