--- a/lesson7/imgload.html
+++ b/lesson7/imgload.html
@@ -5,12 +5,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Progressive Image Loading">>
-        <link rel="stylesheet" href="loadstyle.css">
+        <link rel="stylesheet" href="CSS/loadstyle.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         
     </head>
     <body class="gridview">
-        <h1>Lazy Loading</h1>
+        <h1>Weather Gallery</h1>
         <div>
             <picture>
                 <img src="images/placeholder.jpg" data-src ="images/image1.jpg" alt="Christmas Tree">
