--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -53,28 +53,28 @@
                     <figcaption>Air Dawn</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder.jpg" data-src="images/image4.jpg" alt="girl in fur">
-                    <figcaption>Air Space</figcaption>
+                    <img src="images/placeholder.jpg" data-src="images/gallery/landscape_partlyclody.jpg" alt="Partly Cloudy Sky">
+                    <figcaption>Partly Cloudy Sky </figcaption>
                 </figure>
                 <pfigure>
-                    <img src="images/placeholder.jpg" data-src="images/image5.jpg" alt="chrsitmas presents">
-                    <figcaption>Air Space</figcaption>
+                    <img src="images/placeholder.jpg" data-src="images/gallery/rain_boots.jpg" alt="Rain Boots">
+                    <figcaption>Rain Boots</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder.jpg" data-src="images/image6.jpg" alt="girl hanging presents">
-                    <figcaption>Air Space</figcaption>
+                    <img src="images/placeholder.jpg" data-src="images/gallery/rainbow.jpg" alt="Rainbow">
+                    <figcaption>Rainbow</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder.jpg" data-src="images/image6.jpg" alt="girl hanging presents">
-                    <figcaption>Air Space</figcaption>
+                    <img src="images/placeholder.jpg" data-src="images/gallery/sky.jpg" alt="Blue Sky">
+                    <figcaption>Blue Sky</figcaption>
                 </figure>
                 <figure>
-                <img src="images/placeholder.jpg" data-src="images/image6.jpg" alt="girl hanging presents">
-                    <figcaption>Air Space</figcaption>
+                <img src="images/placeholder.jpg" data-src="images/gallery/streetsnow.jpg" alt="Snow">
+                    <figcaption>Snow</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder.jpg" data-src="images/image6.jpg" alt="girl hanging presents">
-                    <figcaption>Air Space</figcaption>
+                    <img src="images/placeholder.jpg" data-src="thunderbolt" alt="Thunder Bolt">
+                    <figcaption>Thunder Bolt</figcaption>
                 </figure>
             </div>
 
@@ -91,7 +91,7 @@
                 WebFont.load({google:{families: ['Roboto']}});
             </script>
             <script src="js/windchill.js"></script>
-            <script src="load.js" defer></script> 
+            <script src="js/load.js" defer></script> 
     </body>
 
 </html>
