--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -56,7 +56,7 @@
                     <img src="images/placeholder.jpg" data-src="images/gallery/landscape_partlyclody.jpg" alt="Partly Cloudy Sky">
                     <figcaption>Partly Cloudy Sky </figcaption>
                 </figure>
-                <pfigure>
+                <figure>
                     <img src="images/placeholder.jpg" data-src="images/gallery/rain_boots.jpg" alt="Rain Boots">
                     <figcaption>Rain Boots</figcaption>
                 </figure>
@@ -73,7 +73,7 @@
                     <figcaption>Snow</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder.jpg" data-src="thunderbolt" alt="Thunder Bolt">
+                    <img src="images/placeholder.jpg" data-src="thunderbolt.jpg" alt="Thunder Bolt">
                     <figcaption>Thunder Bolt</figcaption>
                 </figure>
             </div>
