--- a/lesson7/imgload.html
+++ b/lesson7/imgload.html
@@ -31,6 +31,6 @@
                 <img src="images/placeholder.jpg" data-src="images/image6.jpg" alt="girl hanging presents">
             </picture>
         </div>
-        <script src="load.js" defer></script>  
+        <script src="js/load.js" defer></script>  
     </body>
     </html>
