--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href = "CSS/normalize.css">
         <link rel="stylesheet" href="CSS/gallery-style.css">
         <link rel="stylesheet" href = "CSS/l7middle.css">
-        <link rel="stylesheet" href = "css/l6large.css">
+        <link rel="stylesheet" href = "CSS/l7large.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <script src="js/toggle.js"></script>
         
@@ -30,15 +30,15 @@
                 <ul class="navigationbar">
                     <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
                     <li><a href ="#">Home</a></li>
-                    <li><a href ="preston-6.html" class="active">Preston</a></li>
+                    <li><a href ="preston-6.html" >Preston</a></li>
                     <li><a href="#">Soda Springs</a></li>
                     <li><a href="#">Fish Haven</a></li>
                     <li><a href="#">Storm Center</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="gallery-7.html"class="active">Gallery</a></li>
                 </ul>
             </nav> 
         <main>
-            <h1>Image Gallery</h1>
+            <h1 id="gallery">Image Gallery</h1>
             <div class="img-gallery">
                 <figure>
                     <img src="images/placeholder.jpg" data-src ="images/gallery/air_atmosphere.jpg" alt="Air Atmosphere">
@@ -73,7 +73,7 @@
                     <figcaption>Snow</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder.jpg" data-src="thunderbolt.jpg" alt="Thunder Bolt">
+                    <img src="images/placeholder.jpg" data-src="images/gallery/thunderbolt.png" alt="Thunder Bolt">
                     <figcaption>Thunder Bolt</figcaption>
                 </figure>
             </div>
