--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -46,7 +46,7 @@
                 </figure>
                 <figure>
                     <img src="images/placeholder.jpg" data-src="images/gallery/cloudysky.jpg" alt="Cloudy Sky">
-                    <figcaption>Clody Sky</figcaption>
+                    <figcaption>Cloudy Sky</figcaption>
                 </figure>
                 <figure>
                     <img src="images/placeholder.jpg" data-src="images/gallery/dawn.jpg" alt = "Dawn">
