--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -30,7 +30,7 @@
                 <ul class="navigationbar">
                     <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
                     <li><a href ="#">Home</a></li>
-                    <li><a href ="preston-6.html" >Preston</a></li>
+                    <li><a href ="/lesson7/lesson6/preston-6.html" >Preston</a></li>
                     <li><a href="#">Soda Springs</a></li>
                     <li><a href="#">Fish Haven</a></li>
                     <li><a href="#">Storm Center</a></li>
