--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -14,14 +14,14 @@
         <table>
            <thead>
             <tr>
-                <th colspan="3"><strong>ACME Wildwest</strong></th>
+                <th colspan="3" style="padding:15px;"><strong>ACME Wildwest</strong></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-                <td>Period</td>
-                <td>Sales</td>
-                <td>Sales Goals</td>
+                <th>Period</th>
+                <th>Sales</th>
+                <th>Sales Goals</th>
             </tr>
             <tr>
                 <td>August</td>
@@ -45,7 +45,7 @@
             </tr>
             <tr>
                 <td><i>Black Friday</i></td>
-                <td colspan="2">$3,200</td>
+                <td colspan="2" style="text-align:center;">$3,200</td>
             </tr>
             <tr>
                 <td>December</td>
@@ -55,7 +55,7 @@
           </tbody>
           <tfoot>
               <tr>
-                <td colspan="3">Compiled 12.29.2020 by bRauts</td>
+                <td colspan="3"style="padding:10px;">Compiled 12.29.2020 by bRauts</td>
               </tr>
           </tfoot>
         </table>
