--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li>Lesson 05:<a href="lesson5/preston-5.html">Preston</a></li>
                 <li>Lesson 06:<a href="lesson6/preston-6.html">Preston:Working with images</a></li>
                 <li>Lesson 07:<a href="lesson7/imgload.html">Progressive Image Loading</a>|<a href="lesson7/gallery-7.html">Gallery</a></li>
+                <li>Lesson 08:<a href="lesson8/tablebuild.html">Table Build</a></li>
             </ul>
 
         </main>
