--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Building an HTML table">
-        <link rel="stylesheet" href = "CSS/normalize.css">
-        <link rel="stylesheet" href="/lesson8/style/tablestyle.css">
+        <!--<link rel="stylesheet" href = "CSS/normalize.css">-->
+        <link rel="stylesheet" type="text/css" href="/lesson8/style/tablestyle.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
         
     </head>
