--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Weather site Project:CIT230 BYUI">
         <link rel="shortcut icon" href = "images/myfavicon.ico" type="image/x-icon">
         <link rel="stylesheet" href = "/lesson6/css/normalize.css">
-        <link rel="stylesheet" href="/lesson6/css/l6small.css">
+        <link rel="stylesheet" href="/lesson8/css/small.css">
         <link rel="stylesheet" href = "/lesson6/css/l6middle.css">
         <link rel="stylesheet" href = "/lesson6/css/l6large.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
@@ -38,36 +38,50 @@
             </ul>
         </nav> 
         <main><!--FORM--> 
-            <form>
+            <form method="get" action="thanks.html">
                 <fieldset>
                 <legend>Personal Information</legend>
-                Full Name<input type="text" name="fname" required>
-                E-mail<input type="email" name="email" placeholder="someone@gmail.com">
-                Phone Number<input type="tel" name="number" placeholder="123-456-7891"required>
-                Zip Code<input type="number" name="zipcode" required>
+                <label class="top">Full Name*<input type="text" name="fname" required></label>
+                <label class="top">E-mail<input type="email" name="email" placeholder="example@gmail.com"></label>
+                <label class="top">Phone Number*<input type="tel" name="phone" placeholder="123-456-7891"required></label>
+                <label class="top">Zip Code*<input type="number" name="zipcode" required></label>
 
 
             </fieldset>
             <!-------------------Section 2---------------------->
             <fieldset>
                 <legend>Storm Details</legend>
-                Storm Date<input type="date" name="stormdate">
-                Storm Type<input list="stormtype" name="storms">
-                <datalist>
+                <label class="top">Storm Date<input type="date" name="stormdate"></label>
+                <label class="top">Storm Type<input list="stormtype" name="storms"></label>
+                <datalist id="stormtype">
                     <option value="Flash Flood">
                     <option value="Hail">
                     <option value="Hurricane">
                     <option value="Thunderstorm">
                     <option value="Tornado">
                 </datalist>
-                Storm Severity<input type="range">
-                Storm region
+                <label>Storm Severity<input type="range"></label>
+                <label class="top">Storm region
+                    <select name="regions">
+                        <option value="" >Select Region</option>
+                        <option value="preston">Preston</option>
+                        <option value="sodasprings">Soda Springs</option>
+                        <option value="fishHaven">Fish Haven</option>
+                    </select>
+                </label>
+                <div>User in-danger level
+                <label><input type="radio" name="dangerlevel" value="Yes">Yes</label>
+                <label><input type="radio" name="dangerlevel" value="Maybe">Maybe</label>
+                <label><input type="radio" name="dangerlevel" value="No">No</label>
+            </div>
             </fieldset>
             <!--------------------Section 3---------------------->
             <fieldset>
                 <legend>Additional Information</legend>
+                <label><textarea name="comments" row="10" cols="30" placeholder="comment here...|"></textarea></label>
             </fieldset>
-
+            <br>
+            <input type="submit" value="Report Storm">
             </form>
             
         </main>
