--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -37,11 +37,12 @@
                 <li><a href="/lesson7/gallery-7.html">Gallery</a></li>
             </ul>
         </nav> 
-        <main><!--FORM--> 
+        <main><!----------------FORM---------------------------> 
+            <h1 id="storm_heading">Report a storm</h1>
             <form method="get" action="thanks.html">
                 <fieldset>
                 <legend>Personal Information</legend>
-                <label class="top">Full Name*<input type="text" name="fname" required></label>
+                <label class="top">Full Name*<input type="text" name="fname" required pattern="[A-Za-z ]{5,99}"></label>
                 <label class="top">E-mail<input type="email" name="email" placeholder="example@gmail.com"></label>
                 <label class="top">Phone Number*<input type="tel" name="phone" placeholder="123-456-7891"required></label>
                 <label class="top">Zip Code*<input type="number" name="zipcode" required></label>
@@ -58,9 +59,22 @@
                     <option value="Thunderstorm">
                     <option value="Tornado">
                 </datalist>
-                <label>Storm Severity (1-10)&nbsp;&nbsp;&nbsp;
-                <input type="range">
+                <label class="severity">Storm Severity (1-10): 
+                <input type="range" name="severity" min="1" max="10" step="1" list="topmarks"oninput="adjustRating(this.value)" onchange="adjustRating(this.value)"><span id="ratingvalue">5</span>
                 </label>
+                <datalist id="topmarks">
+                    <option value="0">
+                    <option value="1">
+                    <option value="2">
+                    <option value="3">
+                    <option value="4">
+                    <option value="5">
+                    <option value="6">
+                    <option value="7">
+                    <option value="8">
+                    <option value="9">
+                    <option value="10">
+                    </datalist>
                 <label class="top">Storm region
                     <select name="regions">
                         <option value="" >Select Region</option>
@@ -97,6 +111,7 @@
             WebFont.load({google:{families: ['Roboto']}});
         </script>
         <script src="/lesson6/js/windchill.js"></script>
+        <script src="/lesson8/js/ratingbar.js"></script>
         
         
     </body>
