--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -77,7 +77,7 @@
                     </datalist>
                 <label class="top">Storm region
                     <select name="regions">
-                        <option value="" >Select Region</option>
+                        <option value="" disabled="disabled" selected="selected">Select Region</option>
                         <option value="preston">Preston</option>
                         <option value="sodasprings">Soda Springs</option>
                         <option value="fishHaven">Fish Haven</option>
