--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -37,7 +37,7 @@
                 <li><a href="/lesson7/gallery-7.html">Gallery</a></li>
             </ul>
         </nav> 
-        <main><!----------------FORM---------------------------> 
+        <main><!--FORM--> 
             <div id="thanksmsg">Thank you. Your form has been submitted.</div>
             
         </main>
