--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -8,6 +8,7 @@
         <!--<link rel="stylesheet" href = "CSS/normalize.css">-->
         <link rel="stylesheet" type="text/css" href="/lesson9/css/prophets.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+        <script src="js/prophets.js"></script>
         
     </head>
     <body>
