--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Prophets">
-        <!--<link rel="stylesheet" href = "CSS/normalize.css">-->
+        <link rel="stylesheet" href = "/lesson9/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="/lesson9/css/prophets.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
         <script src="js/prophets.js"></script>
