--- a/lesson9/home.html
+++ b/lesson9/home.html
@@ -29,11 +29,11 @@
         <nav><!--navigation here-->
             <ul class="navigationbar">
                 <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-                <li><a href ="#">Home</a></li>
+                <li><a href ="home.html"class="active">Home</a></li>
                 <li><a href ="/lesson6/preston-6.html" >Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
-                <li><a href="stormcenter.html" class="active" >Storm Center</a></li>
+                <li><a href="stormcenter.html" >Storm Center</a></li>
                 <li><a href="/lesson7/gallery-7.html">Gallery</a></li>
             </ul>
         </nav> 
