--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -78,27 +78,27 @@
                 <h2>5 Day Forecast</h2>
                 <div class="fiveday">
                     <div class="forecast">
-                        <span class="weekday">Wed</span>
+                        <span class="weekday" id="day1"></span>
                         <img src="" alt="" id="icon1">
-                        <span class="weather-data">&deg;F</span>
+                        <span class="weather-data" id="temp1"></span>
                     </div>
                     <div class="forecast">
-                        <span class="weekday">Thur</span>
-                        <img src="images/sunny.png" alt="Sunny" width="100" height="100">
-                        <span class="weather-data">74&deg;F</span>
+                        <span class="weekday" id="day2"></span>
+                        <img src="" alt="" id="icon2">
+                        <span class="weather-data" id="temp2">&deg;F</span>
                     </div>
                     <div class="forecast">
-                        <span class="weekday">Fri</span>
+                        <span class="weekday"></span>
                         <img src="images/sunny.png" alt="Sunny" width="100" height="100">
                         <span class="weather-data">93&deg;F</span>
                     </div>
                     <div class="forecast">
-                        <span class="weekday">Sat</span>
+                        <span class="weekday"></span>
                         <img src="images/sunny.png" alt="Sunny" width="100" height="100">
                         <span class="weather-data">80&deg;F</span>
                     </div>
                     <div class="forecast">
-                        <span class="weekday">Sun</span>
+                        <span class="weekday"></span>
                         <img src="images/sunny.png" alt="Sunny" width="100" height="100">
                         <span class="weather-data">88&deg;F</span>
                     </div>
