--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -85,22 +85,22 @@
                     <div class="forecast">
                         <span class="weekday" id="day2"></span>
                         <img src="" alt="" id="icon2">
-                        <span class="weather-data" id="temp2">&deg;F</span>
+                        <span class="weather-data" id="temp2"></span>
                     </div>
                     <div class="forecast">
-                        <span class="weekday"></span>
-                        <img src="images/sunny.png" alt="Sunny" width="100" height="100">
-                        <span class="weather-data">93&deg;F</span>
+                        <span class="weekday" id="day3"></span>
+                        <img src="" alt="" id="icon3">
+                        <span class="weather-data" id="temp3"></span>
                     </div>
                     <div class="forecast">
-                        <span class="weekday"></span>
-                        <img src="images/sunny.png" alt="Sunny" width="100" height="100">
-                        <span class="weather-data">80&deg;F</span>
+                        <span class="weekday" id="day4"></span>
+                        <img src="" alt="" id="icon4">
+                        <span class="weather-data" id="temp4"></span>
                     </div>
                     <div class="forecast">
-                        <span class="weekday"></span>
-                        <img src="images/sunny.png" alt="Sunny" width="100" height="100">
-                        <span class="weather-data">88&deg;F</span>
+                        <span class="weekday" id="day5"></span>
+                        <img src="" alt="" id="icon5">
+                        <span class="weather-data" id="temp5"></span>
                     </div>
                 </div>
             </section>
@@ -108,7 +108,7 @@
             <div class="article-area"><!--article area-->
                 <img class="articleimg" src="images/zion-park-139012_640.jpg" alt="Seasons of the year" >
                 <div class="article-holder">
-                    <h3>Getting Ready for another season</h3>
+                    <h3>Be prepared for winter</h3>
                     <h5><i>Written by: Lusanda Mavuma</i></h5>
                     <p>Massa sapien faucibus et molestie ac feugiat sed. Facilisis gravida neque convallis a cras semper. Porttitor massa id neque aliquam vestibulum. Id volutpat lacus laoreet non curabitur gravida arcu ac.</p>
                     <p>Consectetur purus ut faucibus pulvinar elementum integer enim neque. Est placerat in egestas erat.Vitae nunc sed velit dignissim sodales ut eu sem integer. Purus semper eget duis at tellus. Neque aliquam vestibulum morbi blandit cursus.</p>
