--- a/lesson10/imgload.html
+++ b/lesson10/imgload.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Progressive Image Loading">>
-        <link rel="stylesheet" href="CSS/loadstyle.css">
+        <link rel="stylesheet" href="css/loadstyle.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         
     </head>
