--- a/lesson10/gallery-7.html
+++ b/lesson10/gallery-7.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Weather site Project:CIT230 BYUI">
         <link rel="shortcut icon" href = "images/myfavicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href = "CSS/normalize.css">
-        <link rel="stylesheet" href="CSS/gallery-style.css">
-        <link rel="stylesheet" href = "CSS/l7middle.css">
-        <link rel="stylesheet" href = "CSS/l7large.css">
+        <link rel="stylesheet" href = "css/normalize.css">
+        <link rel="stylesheet" href="css/gallery-style.css">
+        <link rel="stylesheet" href = "css/l7middle.css">
+        <link rel="stylesheet" href = "css/l7large.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <script src="js/toggle.js"></script>
         
@@ -29,11 +29,11 @@
             <nav><!--navigation here-->
                 <ul class="navigationbar">
                     <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-                    <li><a href ="#">Home</a></li>
-                    <li><a href ="/lesson7/lesson6/preston-6.html" >Preston</a></li>
+                    <li><a href ="home.html">Home</a></li>
+                    <li><a href ="preston-10.html" >Preston</a></li>
                     <li><a href="#">Soda Springs</a></li>
                     <li><a href="#">Fish Haven</a></li>
-                    <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
+                    <li><a href="stormcenter.html">Storm Center</a></li>
                     <li><a href="gallery-7.html" class="active">Gallery</a></li>
                 </ul>
             </nav> 
@@ -84,12 +84,11 @@
                  
                 <p><span id="day"></span></p>                 
             </footer>
+            <script src="js/date.js"></script>
             <script src="js/updates.js"></script>
             <script src="js/displaybanner.js"></script>
             <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-            <script>
-                WebFont.load({google:{families: ['Roboto']}});
-            </script>
+            <script src="js/fontfamily.js"></script>
             <script src="js/windchill.js"></script>
             <script src="js/load.js" defer></script> 
     </body>
