--- a/lesson10/home.html
+++ b/lesson10/home.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Weather site Project:CIT230 BYUI">
         <link rel="shortcut icon" href = "images/myfavicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href = "/lesson8/css/normalize.css">
+        <link rel="stylesheet" href = "css/normalize.css">
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href = "css/middle.css">
         <link rel="stylesheet" href = "css/large.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-        <script src="/lesson6/js/toggle.js"></script>
+        <script src="js/toggle.js"></script>
         
 
     </head>
@@ -30,11 +30,11 @@
             <ul class="navigationbar">
                 <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
                 <li><a href ="home.html"class="active">Home</a></li>
-                <li><a href ="/lesson6/preston-6.html" >Preston</a></li>
+                <li><a href ="preston-10.html" >Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="stormcenter.html" >Storm Center</a></li>
-                <li><a href="/lesson7/gallery-7.html">Gallery</a></li>
+                <li><a href="gallery-7.html">Gallery</a></li>
             </ul>
         </nav> 
         <main><!--home page-->
@@ -65,12 +65,11 @@
              
             <p><span id="day"></span></p>                 
         </footer>
-        <script src="/lesson8/js/updates.js"></script>
-        <script src="/lesson8/js/displaybanner.js"></script>
+        <script src="js/date.js"></script>
+        <script src="js/updates.js"></script>
+        <script src="js/displaybanner.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-        <script>
-            WebFont.load({google:{families: ['Roboto']}});
-        </script>
+        <script src="js/fontfamily.js"></script>
         <script src="/js/windchill.js"></script>
         <!--<script src="/lesson8/js/ratingbar.js"></script>-->
         <script src="js/towns.js"></script>
