--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <li>Lesson 07:<a href="lesson7/imgload.html">Progressive Image Loading</a>|<a href="lesson7/gallery-7.html">Gallery</a></li>
                 <li>Lesson 08:<a href="lesson8/tablebuild.html">Table Build</a>|<a href="lesson8/stormcenter.html">Storm Center</a></li>
                 <li>Lesson 09:<a href="/lesson9/prophets.html">Prophets</a>| <a href="/lesson9/home.html">Home Page</a></li>
+                <li>Lesson 10:<a href="/lesson10/api-test.html">API Test</a> | <a href="/lesson10/preston-10.html">Preston Weather API </a> </li>
+
             </ul>
 
         </main>
@@ -39,8 +41,6 @@
         <script src="Javascript/date.js"></script>
         
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-        <script>
-        WebFont.load({google:{families: ['Roboto']}});
-        </script>
+        <script src="js/fontfamily.js"></script>
     </body>
 </html>
