--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -50,7 +50,6 @@
                     <tr>
                         <th colspan="2">Weather Summary</th>
                     </tr>
-                    
                     <tr>
                         <td>Currently :</td>
                         <td><span id="currently"></span></td>
@@ -61,7 +60,7 @@
                     </tr>
                     <tr>
                         <td>Wind Speed:</td>
-                        <td><span id="windSpeed"></span>mph</td>
+                        <td><span id="windSpeed"></span></td>
                     </tr>
                     <tr>
                         <td>Wind Chill :</td>
