--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -56,7 +56,7 @@
                     </tr>
                     <tr>
                         <td>High :</td>
-                        <td> <span id="temp"></span>&deg;F</td>
+                        <td> <span id="temp"></span></td>
                     </tr>
                     <tr>
                         <td>Wind Speed:</td>
@@ -68,7 +68,7 @@
                     </tr>
                     <tr>
                         <td>Humidity :</td>
-                        <td><span id="humidity"></span>&#37;</td> 
+                        <td><span id="humidity"></span></td> 
                     </tr>
                 </table>
             </div>
