--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -41,9 +41,9 @@
             <h2>Preston Idaho</h2>
             <div class="container1">
                 <picture>
-                    <source srcset="images/heroImageSmall-400.jpg" media = "(max-width:500px)">
-                    <source srcset="images/heroImageMedium-760.jpg" media = "(min-width:520px) and (max-width:959px)" >
-                    <source srcset="images/heroImageLarge-950.jpg" media = "(min-width:960px)">
+                    <source srcset="images/heroimage2-small-400.jpg" media = "(max-width:500px)">
+                    <source srcset="images/heroimage2-760.jpg" media = "(min-width:520px) and (max-width:959px)" >
+                    <source srcset="images/heroimage2-950.jpg" media = "(min-width:960px)">
                     <img class="heroImg" src="images/heroimage2.jpg" alt="Preston Town">
                 </picture>
                 <table class="weatherSum">
@@ -107,7 +107,7 @@
             <div class="article-area"><!--article area-->
                 <img class="articleimg" src="images/zion-park-139012_640.jpg" alt="Winter Season" >
                 <div class="article-holder">
-                    <h3>Be prepared for stay safe and healthy in winter</h3>
+                    <h3>Be prepared to stay safe and healthy in winter</h3>
                     <h5><i>Written by CDC :Centers for Disease Control and Prevention</i></h5>
                     <p>Winter storms and cold temperatures can be dangerous. Stay safe and healthly by planning ahead. Prepare your home and cars. Prepare for power outages and outdoor activies. </p>
                     <p>Take These Steps for Your Home: </p>
